# mindvault-ai

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/adapters/outbound/ai/: __init__.py  local_embedder.py
backend/app/adapters/outbound/db/: celery_worker_db.py  session.py  sqlalchemy_models.py
backend/app/adapters/outbound/email/: email_sender.py  invitation_email.mjml
backend/app/adapters/outbound/llm/: gemini_provider.py  openai_provider.py
backend/app/adapters/outbound/loaders/: __init__.py  docx_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py
backend/app/adapters/outbound/parser/: __init__.py  doc_parser.py  (+3 more)
backend/app/application/dto/: document_schemas.py  requests.py  responses.py
backend/app/application/services/: chat_service.py  iam_service.py  ingestion_service.py
backend/app/application/tasks/: __init__.py  audit_tasks.py  document_tasks.py  email_tasks.py  ingestion_tasks.py
backend/app/application/use_cases/: ingest_document.py  login_user_service.py  process_document_chunks.py  register_user_service.py  switch_org_service.py
backend/app/domain/entities/: __init__.py  chat_message.py  chat_session.py  document.py  document_chunk.py  organization.py  organization_membership.py  usage_event.py  user.py
backend/app/domain/services/: chunking_policy.py
backend/app/domain/value_objects/: ingest_status.py  membership_status.py  tenant_context.py  user_role.py
backend/app/infrastructure/: celery_app.py  config.py
backend/app/infrastructure/di/: container.py  providers.py
backend/app/infrastructure/prompts/: loader.py  prompts.yml
backend/app/infrastructure/security/: auth.py  celery_app.py  permissions.py  redis_services.py  tenant_context.py
backend/mindvault_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+97 files in other folders)
