[project]
name = "mindvault-backend"
version = "0.1.0"
description = "MindVault AI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "alembic>=1.13.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "pydantic>=2.8.0",
  "email-validator>=2.2.0",
  "redis>=5.0.0",
  "jinja2>=3.1.0",
  "celery>=5.3.0",
]
