[project]
name = "mindvault-backend"
version = "0.1.0"
description = "MindVault AI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "alembic>=1.13.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "pydantic>=2.8.0",
  "email-validator>=2.2.0",
  "redis>=5.0.0",
  "jinja2>=3.1.0",
  "celery>=5.3.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "sentence-transformers==2.7.0",
  "pymupdf>=1.24.2",
  "pinecone-client==3.2.2",
  "torch>=2.0.0",
  "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.7.0",
  "isort>=5.12.0",
  "pylint>=2.17.0",
  "mypy>=1.4.0",
  "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Setuptools auto-discovery would otherwise pick up sibling dirs (e.g. ``var/``
# created by the document storage adapter, ``mindvault_backend.egg-info``).
# Pin discovery to the actual application package only.
[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["var*", "tests*", "*.egg-info*"]
